# CV-AI-Analyzer

./: README.md  main.py  pyproject.toml
